2010-04-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/freebsd.h: Restore osreldate.h include.
	Suggested by Naohiro Aota.

2010-04-16  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (apply_systemfont_to_menu): *childs was incorrectly used.

2010-04-16  Ken Brown  <kbrown@cornell.edu>  (tiny change)

	* s/cygwin.h: Avoid linking against static libgcc.

2010-04-15  Juri Linkov  <juri@jurta.org>

	* window.c: Add Qscroll_command.
	Remove Vscroll_preserve_screen_position_commands.
	(window_scroll_pixel_based, window_scroll_line_based): Check the
	`scroll-command' property on the last command instead of searching
	the last command in Vscroll_preserve_screen_position_commands.
	(syms_of_window): Initialize and staticpro `Qscroll_command'.
	Put Qscroll_command property on Qscroll_up and Qscroll_down.
	(scroll-preserve-screen-position): Doc fix.
	(Vscroll_preserve_screen_position_commands): Remove variable.

2010-04-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* xdisp.c (message): Do not use NO_ARG_ARRAY.

2010-04-14  Dan Nicolaescu  <dann@ics.uci.edu>

	Reduce cpp use in Makefile.in.
	* Makefile.in (DBUS_CFLAGS, DBUS_LIBS, GCONF_CFLAGS, GCONF_LIBS)
	(LIBSOUND, CFLAGS_SOUND, RSVG_LIBS, RSVG_CFLAGS, INTERVALS_H)
	(GETLOADAVG_LIBS, RUN_TEMACS): Move to the autoconf section.
	(ORDINARY_LINK): Remove, defined in src/s/gnu.h.
	(CRT0_COMPILE): Remove, inline it in the only user.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* window.c (keys_of_window): Rebind `C-v' from `scroll-up' to
	`scroll-up-command' and `M-v' from `scroll-down' to
	`scroll-down-command'.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* window.c (Vscroll_preserve_screen_position_commands): New variable
	with the default value as the list of Qscroll_down and Qscroll_up.
	(window_scroll_pixel_based, window_scroll_line_based): Search the
	last command in the list Vscroll_preserve_screen_position_commands
	instead of comparing with Qscroll_up and Qscroll_down.

2010-04-13  Jan Djärv  <jan.h.d@swipnet.se>
